Change in activity_first_bio1.xml, added activity_two_field_of_study.xml, activity_three_smoker.xml, activity_four_drink.xml, activity_five_sleeping.xml, activity_six_food.xml, activity_seven_religion.xml and also added class file of that xml file..
class file for activity two study, for activity three smoker.java, for activity four drink.java, for activity five sleeping.java, for activity six food.java, for activity seven religion.java and also change in AndroidManifest.xml file..

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,24 @@
             android:name=".firstDetails"
             android:exported="false" />
         <activity
+            android:name=".study"
+            android:exported="false" />
+        <activity
+            android:name=".smoker"
+            android:exported="false" />
+        <activity
+            android:name=".food"
+            android:exported="false" />
+        <activity
+            android:name=".religion"
+            android:exported="false" />
+        <activity
+            android:name=".drink"
+            android:exported="false" />
+        <activity
+            android:name=".sleeping"
+            android:exported="false" />
+        <activity
             android:name=".verifyLoginOtp"
             android:exported="false" />
         <activity
