--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,9 @@
             android:name=".drink"
             android:exported="false" />
         <activity
+            android:name=".homeScreen"
+            android:exported="false" />
+        <activity
             android:name=".sleeping"
             android:exported="false" />
         <activity
