--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,9 @@ android {
 
 dependencies {
 
+    implementation 'com.android.support:appcompat-v7:33.0.0-alpha1'
+    implementation 'com.android.support:support-v4:33.0.0-alpha1'
+    implementation 'com.android.support:design:33.0.0-alpha1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
